# plyze

./: .gitignore  justfile  pyproject.toml
.github/workflows/: test.yaml
.tests/unit/: common.py  conftest.py  test_consolidate_metrics.py  test_create_jpg.py  test_create_jpg_metrics.py
config/: test.yaml
src/plys/classify/: main.py
src/plys/cli/: studies.py
src/plys/cli/make/: main.py  metrics.py  plots.py  qoi.py
src/plys/examples/jpg/: ostwald11.py
src/plys/jpg/: interfaces.py  main.py  metrics.py
src/plys/qoi/: custom_qois.py  xarray_helpers.py
src/plys/qoi/data/: data.py  interfaces.py  outputs.py  spaces.py
src/plys/qoi/plots/: bivar_plots.py  plots.py  theme.py
src/plys/qoi/registries/: custom.py  custom_qois.py  interfaces.py  main.py
src/plyze/: __init__.py  data_graph.py  paths.py  utils.py
src/plyze/classify/: main.py
src/plyze/cli/: studies.py
src/plyze/cli/make/: jpg.py  main.py  plots.py  qoi.py
src/plyze/examples/: casedata.py
src/plyze/examples/jpg/: ostwald11.py
src/plyze/fpviz/: main.py
src/plyze/jpg/: interfaces.py  main.py  metrics.py
src/plyze/plots/: altair_helpers.py
src/plyze/qoi/: xarray_helpers.py
src/plyze/qoi/data/: data.py  interfaces.py  outputs.py
src/plyze/qoi/plots/: bivar_plots.py  plots.py
src/plyze/qoi/registries/: custom.py  main.py  (+1 more)
src/plyze/temporal/: main.py
tests/jpg/: test_creation.py  test_metrics.py
tests/plan_viz/: test_viz.py
tests/qois/: test_cli.py  test_data.py  test_time_selection.py
workflow/: Snakefile
workflow/rules/: common.smk  jpg.smk  qoi.smk  temporal.smk
(+5 files in other folders)
