[project]
name = "plys"
version = "0.1.0"
description = "ply: floor PLan analYSis"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "altair>=6.0.0",
  "loguru>=0.7.3",
  "networkx>=3.6.1",
  "plan2eplus>=0.1.5",
  "ptpython>=3.0.32",
  "scikit-learn>=1.8.0",
  "xarray>=2026.2.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"


[project.scripts]
plys = "plys.cli.main:main"
plys-studies = "plys.cli.studies:main"
