[project]
name = "plyze"
version = "0.1.14"
description = "plyze: floor PLan analYZEr"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "altair>=6.0.0",
  "loguru>=0.7.3",
  "networkx>=3.6.1",
  "plan2eplus>=0.1.5",
  "pre-commit>=4.5.1",
  "ptpython>=3.0.32",
  "scikit-learn>=1.8.0",
  "snakemake>=9.16.3",
  "xarray>=2026.2.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"


[project.scripts]
plyze = "plyze.cli.make.main:main"
plyze-studies = "plyze.cli.studies:main"
